Fix CORS configuration for production environment
-Key features implemented:
-Updated SecurityConfigProd.java to replace setAllowedOrigins with setAllowedOriginPatterns for better CORS handling in production
-Modified .gitignore to preserve SecurityConfigProd.java file while maintaining proper ignore patterns for build artifacts and dependencies
-Enhanced CORS configuration to support wildcard origins using pattern matching instead of deprecated allowed origins array

The changes resolve the cross-origin resource sharing issues between the frontend and backend services by implementing proper CORS configuration patterns suitable for production deployment.